# Trobble

./: .gitignore  README.md
backend/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  upload.py
backend/GameStateManager/: GameState.py
backend/cards_logic/: cards_creator.py
backend/face-extractor/: face-extractor.py
backend/face_extractor/: face_extractor.py  face_extractor_controller.py
backend/game/: game_controller.py
backend/game_flow/: game_flow_websocket.py  game_pojos.py  game_state_elements.py  lobby_controller.py  lobby_repository.py
backend/game_logic/: GameState.py  cards_creator.py  game_logic_controller.py  game_state_elements.py  main.py
backend/images_set_creation/: face_extractor.py  images_controller.py
backend/lobby/: lobby_controller.py  lobby_repository.py  lobby_service.py  lobby_types.py  lobby_websockets.py
backend/pojo/: websocket_message.py
backend/utils/: generate_game_id.py  ping_client.py  serialise_lobby.py
frontend/: README.md  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
frontend/components/: ErrorMessage.js
frontend/config/: gameConfig.js  serverConfig.js
frontend/public/src/cards/: card-mechanics.js
frontend/public/src/images/: image-puller.js
frontend/public/src/resources/: resource-puller.js
frontend/scenes/: CreateLobbyScene.js  GameScene.js  GameState.js  JoinLobbyScene.js  LobbyScene.js  StartScene.js
