[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "opencv-python>=4.10.0.84",
]

# tell the LSP to use the virtual env
[tool.pyright]
venvPath = "."
venv = ".venv"
